--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,7 @@ steps:
   commands:
   - docker build -t asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST .
   - echo $GCP_DOCKER_BUILDER_KEY > auth.json
+  - echo $(base64 -d auth.json)
   - echo $(base64 -d auth.json) |  docker login -u _json_key --password-stdin \
           https://asia-south1-docker.pkg.dev 
   - docker asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST
