--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
   commands:
   - docker build -t asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST .
   - echo $GCP_DOCKER_BUILDER_KEY > auth.json
-  - echo $(base64 -d auth.json) |  docker login -u _json_key --password-stdin https://asia-south1-docker.pkg.dev 
+  - echo cat auth.json |  docker login -u _json_key --password-stdin https://asia-south1-docker.pkg.dev 
   - docker push asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST
 - name: deploy_pr
   image: google/cloud-sdk:latest
@@ -59,8 +59,7 @@ steps:
     GCR_PROJECT: savvy-girder-397211
   commands:
   - echo $GCP_DOCKER_BUILDER_KEY > auth.json
-  - echo $(base64 -d auth.json) |  docker login -u _json_key --password-stdin \
-          https://asia-south1-docker.pkg.dev 
+  - echo cat auth.json |  docker login -u _json_key --password-stdin https://asia-south1-docker.pkg.dev 
   - docker rm asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST
 - name: remove_cloud_run
   image: google/cloud-sdk:latest
