--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
   commands:
   - docker build -t asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST .
   - echo $GCP_DOCKER_BUILDER_KEY > auth.json
-  - echo cat auth.json |  docker login -u _json_key --password-stdin https://asia-south1-docker.pkg.dev 
+  - cat auth.json | docker login -u _json_key --password-stdin https://asia-south1-docker.pkg.dev 
   - docker push asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST
 - name: deploy_pr
   image: google/cloud-sdk:latest
@@ -27,7 +27,7 @@ steps:
     GCR_REGION: asia-south1
     SERVICE_NAME: pr-
   commands:
-  - echo $GCP_DOCKER_BUILDER_KEY | base64 -d > ~/service_account.json
+  - echo $GCP_DOCKER_BUILDER_KEY > ~/service_account.json
   - gcloud auth activate-service-account --key-file ~/service_account.json
   - gcloud run deploy $SERVICE_NAME$DRONE_PULL_REQUEST --image=asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST --platform=managed --region=$GCR_REGION --allow-unauthenticated --project=$GCR_PROJECT
   - gcloud run services describe $SERVICE_NAME$DRONE_PULL_REQUEST --region $GCR_REGION --project $GCR_PROJECT --format json > service.json
@@ -59,7 +59,7 @@ steps:
     GCR_PROJECT: savvy-girder-397211
   commands:
   - echo $GCP_DOCKER_BUILDER_KEY > auth.json
-  - echo cat auth.json |  docker login -u _json_key --password-stdin https://asia-south1-docker.pkg.dev 
+  - cat auth.json |  docker login -u _json_key --password-stdin https://asia-south1-docker.pkg.dev 
   - docker rm asia-south1-docker.pkg.dev/savvy-girder-397211/pr-repository/pr-image:$DRONE_PULL_REQUEST
 - name: remove_cloud_run
   image: google/cloud-sdk:latest
@@ -70,7 +70,7 @@ steps:
     GCR_REGION: asia-south1
     SERVICE_NAME: pr-
   commands:
-  - echo $GCP_DOCKER_BUILDER_KEY | base64 -d > ~/service_account.json
+  - echo $GCP_DOCKER_BUILDER_KEY > ~/service_account.json
   - gcloud auth activate-service-account --key-file ~/service_account.json
   - gcloud run services delete $SERVICE_NAME$DRONE_PULL_REQUEST
 
